--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build:assets": "NODE_ENV=production webpack -p --config webpack.prod.config.js",
+    "build:assets": "NODE_ENV=production webpack --mode production --config webpack.prod.config.js",
     "build": "bundle exec middleman build",
-    "start:assets": "NODE_ENV=development webpack --watch --config webpack.dev.config.js",
+    "start:assets": "NODE_ENV=development webpack --mode development --watch --config webpack.dev.config.js",
     "start": "bundle exec middleman server"
   },
   "dependencies": {
@@ -16,16 +16,19 @@
     "scroll-lazy": "^1.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.9",
+    "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.18.0",
-    "concurrently": "^3.1.0",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "concurrently": "^5.0.0",
+    "css-loader": "^3.2.0",
     "import-glob-loader": "^1.1.0",
-    "node-sass": "^3.13.0",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0"
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
   }
 }
